# Aichat

./: .env.example  .gitignore  README.md  main.py  pyproject.toml
db/: chat_crud.py  connection.py  user_crud.py
models/: chat.py  user.py
routers/: admin.py  chat.py  users.py
services/: llm_client.py
static/: admin.html  index.html
