[project]
name = "fastapi-demo"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "aiofiles>=25.1.0",
    "email-validator>=2.3.0",
    "fastapi>=0.128.8",
    "motor>=3.7.1",
    "openai>=2.44.0",
    "python-dotenv>=1.2.1",
    "uvicorn>=0.39.0",
]
